Corrige uso do jdbc driver local pelo disponível nos repositórios maven

--- a/api/pom.xml
+++ b/api/pom.xml
@@ -26,9 +26,8 @@
         </dependency>
 
         <dependency>
-            <groupId>com.oracle</groupId>
+            <groupId>com.oracle.database.jdbc</groupId>
             <artifactId>ojdbc10</artifactId>
-            <version>19.7</version>
             <scope>runtime</scope>
         </dependency>
 
