--- a/app/package.json
+++ b/app/package.json
@@ -8,8 +8,9 @@
     "start": "next start"
   },
   "dependencies": {
-    "next": "9.5.3",
-    "react": "16.13.1",
-    "react-dom": "16.13.1"
+    "axios": "^0.20.0",
+    "next": "^9.5.3",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1"
   }
 }
